# building-register-mcp

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
data_go_mcp/building_register/: api_client.py  region.py  server.py
